--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <title>Meine App</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://cdnjs.cloudflare.com 'unsafe-eval'; style-src https://cdnjs.cloudflare.com 'unsafe-inline' 'unsafe-eval'; style-src-elem 'self' https://cdnjs.cloudflare.com 'unsafe-inline' 'unsafe-eval'; media-src *"> -->
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" /> -->
   </head>
   <body>
     <div id="root" ></div>
